<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/menu_favorites"
            android:orderInCategory="100"
            android:title="@string/favo"
            app:showAsAction="never" />
    </group>

    <item
        android:id="@+id/menu_backup"
        android:orderInCategory="100"
        android:title="@string/favo_backup"
        app:showAsAction="never" />


    <item
        android:id="@+id/menu_inst"
        android:orderInCategory="100"
        android:title="@string/inst"
        app:showAsAction="never" />
</menu>